--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+.blinking{
+    animation:blinkingText 1.5s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: #000;    }
+    49%{    color: transparent; }
+    50%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: #000;    }
+}
 
 .underscore {
 height: 150px;
